# xtensor-blas

./: .appveyor.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  environment-dev.yml  environment.yml  readthedocs.yml  rename_headers.py  xtensor-blas.pc.in  xtensor-blasConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  unix-build.yml
.github/workflows/: linux.yml  osx.yml  windows.yml
benchmark/: CMakeLists.txt  benchmark_blas.hpp  downloadGBenchmark.cmake.in  main.cpp
docs/: Doxyfile  environment.yml
docs/source/: build-options.rst  conf.py  index.rst  installation.rst  performance.rst  reference.rst  releasing.rst  usage.rst
include/flens/cxxblas/: CMakeLists.txt
include/flens/cxxblas/auxiliary/: complex.tcc  pow.h
include/flens/cxxblas/drivers/: drivers.h  drivers.tcc  openblas.h  sparseblas.h
include/flens/cxxblas/level1/: asum.h  asum.tcc  axpy.tcc  copy.tcc  dot.tcc  iamax.h
include/flens/cxxblas/level1extensions/: acxpby.h  acxpby.tcc  acxpy.h  asum1.h  axpby.h  axpby.tcc  axpy.h  ccopy.h  ccopy.tcc  dot.h  dot.tcc  gbaxpby.h  gbaxpby.tcc  gbaxpy.h  geaxpby.h  geaxpy.h  gecopy.h  geraxpy.h  gerscal.h  gerscal.tcc  gescal.tcc  hescal.h  hescal.tcc  level1extensions.tcc  racxpy.h  racxpy.tcc  raxpy.tcc  rscal.h  syscal.h  syscal.tcc  tpaxpy.tcc  tpscal.tcc  traxpy.h  trcopy.tcc  trscal.h  trscal.tcc
include/flens/cxxblas/level2/: gbmv.h  gemv.h  gemv.tcc  ger.h  hbmv.tcc  hemv.tcc  her.h  her.tcc  her2.h  hpmv.tcc  hpr.h  hpr.tcc  sbmv.h  spmv.tcc  spr.tcc  spr2.h  syr.h  syr2.tcc  tbmv.h  tbmv.tcc  tpmv.h  tpmv.tcc  trmv.h  trsv.h
include/flens/cxxblas/level2extensions/: her.h  her2.tcc  trmv.h  trmv.tcc  trsv.tcc
include/flens/cxxblas/level3/: gemm.tcc  herk.h  herk.tcc  level3.tcc  symm.h  syr2k.tcc  syrk.tcc  trmm.h  trmm.tcc  trsm.h
include/flens/cxxblas/level3extensions/: gbmm.h  gbmm.tcc  hbmm.tcc  level3extensions.h  level3extensions.tcc  tbmm.tcc
include/flens/cxxblas/sparselevel2/: gecrsmv.tcc  heccsmv.tcc  hecrsmv.h  hecrsmv.tcc  syccsmv.h  syccsmv.tcc  sycrsmv.h  sycrsmv.tcc
include/flens/cxxblas/sparselevel3/: gecrsmm.tcc  hecrsmm.tcc  sparselevel3.tcc  syccsmm.h  sycrsmm.tcc  trccssm.h  trcrssm.tcc
include/flens/cxxblas/tinylevel1/: acxpby.h  axpby.tcc  axpy.h  ccopy.h  copy.h  geaxpy.tcc  gerscal.h  gescal.h  gescal.tcc  scal.h  scal.tcc  tinylevel1.tcc
include/flens/cxxblas/tinylevel2/: gemv.tcc  tinylevel2.h  tinylevel2.tcc
include/flens/cxxlapack/: CMakeLists.txt  cxxlapack.cxx  cxxlapack.tcc
include/flens/cxxlapack/interface/: bbcsd.tcc  bdsdc.tcc  cgesv.tcc  chla_transtype.tcc  cposv.tcc  disna.tcc  gbbrd.tcc  gbrfs.tcc  gbsvx.tcc  gebd2.tcc  gebrd.tcc  geequ.tcc  geequb.tcc  gees.tcc  geevx.tcc  gegs.tcc  gehd2.tcc  gejsv.tcc  gels.tcc  gelsd.tcc  gelsy.tcc  geqp3.tcc  geqpf.tcc  geqr2.tcc  gerqf.tcc  gesdd.tcc  gesvj.tcc  getf2.tcc  ggbal.tcc  gges.tcc  ggev.tcc  gglse.tcc  ggqrf.tcc  ggrqf.tcc  ggsvd.tcc  ggsvp.tcc  gtsv.tcc  gtsvx.tcc  gttrs.tcc  gtts2.tcc  (+225 more)
include/flens/cxxlapack/netlib/: netlib.h
include/flens/cxxlapack/netlib/interface/: lapack.in.h
include/xflens/cxxblas/: CMakeLists.txt  LICENSE  README.md  cxxblas.doc
include/xflens/cxxblas/drivers/: drivers.h  gotoblas.h  mklblas.h  openblas.h  refblas.h
include/xflens/cxxblas/level1/: axpy.doc  copy.doc  iamax.tcc  nrm2.tcc  scal.tcc
include/xflens/cxxblas/level1extensions/: acxpby.tcc  axpby.tcc  gescal.h  gescal.tcc  imax1.tcc  syscal.tcc  tpaxpy.tcc
include/xflens/cxxblas/level2/: gbmv.tcc  gemv.tcc  hbmv.tcc  hemv.tcc  hpmv.tcc  sbmv.tcc  spmv.tcc  symv.tcc  tpmv.tcc  tpsv.tcc  trsv.tcc
include/xflens/cxxblas/level3/: gemm.tcc  hemm.tcc  her2k.tcc  symm.tcc  syr2k.tcc  syrk.tcc  trmm.tcc  trsm.tcc
include/xflens/cxxlapack/: CMakeLists.txt  cxxlapack.cxx  cxxlapack.h  cxxlapack.tcc
include/xflens/cxxlapack/interface/: gesdd.h  gesdd.tcc  interface.h  interface.tcc  isnan.tcc  labad.h  labad.tcc  lae2.tcc  laesy.tcc  laev2.tcc  lags2.h  lags2.tcc  laisnan.tcc  lamch.tcc  lanv2.tcc  lapy2.tcc  lapy3.h  lapy3.tcc  lartg.tcc  lartgp.tcc  lartgs.tcc  las2.h  las2.tcc  lasv2.tcc  lsame.tcc  sygvd.tcc
include/xflens/cxxlapack/netlib/interface/: dummy.in.cc  filter.pm  lapack.in.h
include/xtensor-blas/: xblas.hpp  xblas_config.hpp  xblas_config.hpp.in  xblas_config_cling.hpp.in  xblas_utils.hpp  xlapack.hpp  xlinalg.hpp
include/xtensor-blas/flens/cxxblas/: cxxblas.cxx  cxxblas.h  cxxblas.tcc
include/xtensor-blas/flens/cxxblas/auxiliary/: auxiliary.h  auxiliary.tcc  complex.h  pow.tcc
include/xtensor-blas/flens/cxxblas/level1/: axpy.h  copy.h  dot.h  iamax.tcc  level1.h  level1.tcc  nrm2.h  nrm2.tcc  rot.h  rot.tcc  rotm.h  rotm.tcc  scal.h  scal.tcc  swap.h  swap.tcc
include/xtensor-blas/flens/cxxblas/level1extensions/: acxpy.tcc  asum1.tcc  axpy.tcc  gbaxpy.tcc  gbcopy.h  gbcopy.tcc  gbcotr.h  gbcotr.tcc  gbscal.h  gbscal.tcc  geaxpby.tcc  geaxpy.tcc  gecopy.tcc  gecotr.h  gecotr.tcc  geraxpy.tcc  gescal.h  geswap.h  geswap.tcc  imax1.h  imax1.tcc  level1extensions.h  raxpy.h  rscal.tcc  tpaxpby.h  tpaxpby.tcc  tpaxpy.h  tpcopy.h  tpcopy.tcc  tpscal.h  traxpby.h  traxpby.tcc  traxpy.tcc  trcopy.h
include/xtensor-blas/flens/cxxblas/level2/: gbmv.tcc  ger.tcc  hbmv.h  hemv.h  her2.tcc  hpmv.h  hpr2.h  hpr2.tcc  level2.h  level2.tcc  sbmv.tcc  spmv.h  spr.h  spr2.tcc  symv.h  symv.tcc  syr.tcc  syr2.h  tbsv.h  tbsv.tcc  tpsv.h  tpsv.tcc  trmv.tcc  trsv.tcc
include/xtensor-blas/flens/cxxblas/level2extensions/: gbmv.h  gbmv.tcc  gemv.h  hemv.h  (+9 more)
include/xtensor-blas/flens/cxxlapack/: cxxlapack.h
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  main.cpp  test-environment.yml  test_blas.cpp  test_complex_float_norm.cpp  test_dot.cpp  test_dot_extended.cpp  test_float_norm.cpp  test_lapack.cpp  test_linalg.cpp  test_lstsq.cpp  test_qr.cpp  test_tensordot.cpp
test/test_generator/cppy_source/: test_dot_extended.cppy  test_lstsq.cppy  test_qr.cppy
(+337 files in other folders)
